{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 148,
  "lineage": "1209243a-1259-97c5-d67b-4ac94d26ba25",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:316713592474:loadbalancer/app/meusite-dev-alb/dac4511180d34ddc",
            "arn_suffix": "app/meusite-dev-alb/dac4511180d34ddc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "meusite-dev-alb-1220346606.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:316713592474:loadbalancer/app/meusite-dev-alb/dac4511180d34ddc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "meusite-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-057d4cc0123ba4671"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-061600870ac091ad1"
              },
              {
                "subnet_id": "subnet-0f09b16da13e168ff"
              }
            ],
            "subnets": [
              "subnet-061600870ac091ad1",
              "subnet-0f09b16da13e168ff"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-alb",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-alb",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.containers_security_group.aws_security_group.containers_sg",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:316713592474:listener/app/meusite-dev-alb/dac4511180d34ddc/6d494df6f745ee4e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:316713592474:targetgroup/meusite-dev-tg/a251e37a5cab95e4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:316713592474:listener/app/meusite-dev-alb/dac4511180d34ddc/6d494df6f745ee4e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:316713592474:loadbalancer/app/meusite-dev-alb/dac4511180d34ddc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.alb",
            "module.containers_security_group.aws_security_group.containers_sg",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:316713592474:targetgroup/meusite-dev-tg/a251e37a5cab95e4",
            "arn_suffix": "targetgroup/meusite-dev-tg/a251e37a5cab95e4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:316713592474:targetgroup/meusite-dev-tg/a251e37a5cab95e4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:316713592474:loadbalancer/app/meusite-dev-alb/dac4511180d34ddc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "meusite-dev-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.containers_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "containers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:security-group/sg-057d4cc0123ba4671",
            "description": "Grupo de seguranca para Containers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera todo trafego de saida para qualquer destino",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057d4cc0123ba4671",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera trafego HTTP de entrada de qualquer origem",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera trafego HTTPS de entrada de qualquer origem",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Libera trafego SSH de entrada de qualquer origem",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "meusite-dev-containers-sg",
            "name_prefix": "",
            "owner_id": "316713592474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-containers-sg",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-containers-sg",
              "Project": "meusite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:internet-gateway/igw-0969a3c574c5f70d7",
            "id": "igw-0969a3c574c5f70d7",
            "owner_id": "316713592474",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-igw",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-igw",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:network-acl/acl-062db61fd3cccafad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-062db61fd3cccafad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 80
              }
            ],
            "owner_id": "316713592474",
            "subnet_ids": [
              "subnet-04107b29cee122338",
              "subnet-061600870ac091ad1",
              "subnet-0bde1ce1b6c18e36f",
              "subnet-0f09b16da13e168ff"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-acl",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-acl",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "egress_efemeras",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-149256662",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-062db61fd3cccafad",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2069610871",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-062db61fd3cccafad",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3803817846",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-062db61fd3cccafad",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_response_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3134529207",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-062db61fd3cccafad",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "ingress_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-590837942",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-062db61fd3cccafad",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_network_acl.main_acl",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:route-table/rtb-05896db89878f400c",
            "id": "rtb-05896db89878f400c",
            "owner_id": "316713592474",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-private-rt",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-private-rt",
              "Project": "meusite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:route-table/rtb-064b60c4d5d091ef1",
            "id": "rtb-064b60c4d5d091ef1",
            "owner_id": "316713592474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0969a3c574c5f70d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-public-rt",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-public-rt",
              "Project": "meusite"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb5adfb125c2d44",
            "route_table_id": "rtb-05896db89878f400c",
            "subnet_id": "subnet-04107b29cee122338"
          },
          "dependencies": [
            "module.main.aws_route_table.private_route",
            "module.main.aws_subnet.private_subnet_a",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e15ad075dd6c89b",
            "route_table_id": "rtb-05896db89878f400c",
            "subnet_id": "subnet-0bde1ce1b6c18e36f"
          },
          "dependencies": [
            "module.main.aws_route_table.private_route",
            "module.main.aws_subnet.private_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00716104091180831",
            "route_table_id": "rtb-064b60c4d5d091ef1",
            "subnet_id": "subnet-0f09b16da13e168ff"
          },
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_route_table.public_route",
            "module.main.aws_subnet.public_subnet_a",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e52a69d005aaffa",
            "route_table_id": "rtb-064b60c4d5d091ef1",
            "subnet_id": "subnet-061600870ac091ad1"
          },
          "dependencies": [
            "module.main.aws_internet_gateway.igw",
            "module.main.aws_route_table.public_route",
            "module.main.aws_subnet.public_subnet_b",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:subnet/subnet-04107b29cee122338",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04107b29cee122338",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316713592474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-private-subnet-us-east-1a",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-private-subnet-us-east-1a",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:subnet/subnet-0bde1ce1b6c18e36f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bde1ce1b6c18e36f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316713592474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-private-subnet-us-east-1b",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-private-subnet-us-east-1b",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:subnet/subnet-0f09b16da13e168ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f09b16da13e168ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316713592474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-public-subnet-us-east-1a",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-public-subnet-us-east-1a",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:subnet/subnet-061600870ac091ad1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061600870ac091ad1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "316713592474",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-public-subnet-us-east-1b",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-public-subnet-us-east-1b",
              "Project": "meusite"
            },
            "vpc_id": "vpc-0b43664ed2b64050c"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316713592474:vpc/vpc-0b43664ed2b64050c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0acb8434bf66d9a0c",
            "default_route_table_id": "rtb-0cc57fbbd23f390bb",
            "default_security_group_id": "sg-00d3d70c8e1df7b9a",
            "dhcp_options_id": "dopt-0eb2d3d3b12fe3db8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b43664ed2b64050c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc57fbbd23f390bb",
            "owner_id": "316713592474",
            "tags": {
              "Environment": "dev",
              "Name": "meusite-dev-vpc",
              "Project": "meusite"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "meusite-dev-vpc",
              "Project": "meusite"
            }
          }
        }
      ]
    }
  ]
}